--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,10 @@ footer {
 	background-color: #f2dede !important;
 }
 
+.break-word {
+	word-break: break-all;
+}
+
 @media only screen and (max-width: 800px) {
 	/* Force table to not be like tables anymore */
 	#no-more-tables table, 
